# asyncfd

./: Cargo.toml  README.md
examples/pass_fd/: Cargo.toml  main.rs
src/: header.rs  lib.rs  split.rs  split_owned.rs
